@@ -3,6 +3,8 @@ Revision history for App::Milter::Limit::Plugin::SQLite
 {{$NEXT}}
     - Kwalitee: enable warnings
     - add a smoke test
+    - don't attempt to chown the database file unless user and group are
+      configured
 
 0.51  2010-03-30
     - dzil: use my @MSCHOUT plugin bundle
